Add typing effect on hero

--- a/index.html
+++ b/index.html
@@ -1,211 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Silicon | Digital Agency Landing</title>
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Silicon - Multipurpose Technology Bootstrap Template">
-    <meta name="keywords" content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative">
-    <meta name="author" content="Createx Studio">
+<head>
+  <meta charset="utf-8" />
+  <title>Silicon | Digital Agency Landing</title>
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Silicon - Multipurpose Technology Bootstrap Template" />
+  <meta name="keywords" content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative" />
+  <meta name="author" content="Createx Studio" />
 
-    <!-- Favicon and Touch Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#6366f1">
-    <link rel="shortcut icon" href="/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#080032">
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+  <!-- Viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Vendor Styles -->
-    <link rel="stylesheet" media="screen" href="/vendor/boxicons/css/boxicons.min.css"/>
-    <link rel="stylesheet" media="screen" href="/vendor/swiper/swiper-bundle.min.css"/>
-    <link rel="stylesheet" media="screen" href="/vendor/lightgallery/css/lightgallery-bundle.min.css"/>
+  <!-- Favicon and Touch Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#6366f1" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <meta name="msapplication-TileColor" content="#080032" />
+  <meta name="msapplication-config" content="/favicon/browserconfig.xml" />
+  <meta name="theme-color" content="#ffffff" />
 
-    <!-- Main Theme Styles + Bootstrap -->
-    <link rel="stylesheet" media="screen" href="/css/theme.min.css">
+  <!-- Vendor Styles -->
+  <link rel="stylesheet" media="screen" href="/vendor/boxicons/css/boxicons.min.css" />
+  <link rel="stylesheet" media="screen" href="/vendor/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" media="screen" href="/vendor/lightgallery/css/lightgallery-bundle.min.css" />
 
-    <!-- Page loading styles -->
-    <style>
-      .page-loading {
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        -webkit-transition: all .4s .2s ease-in-out;
-        transition: all .4s .2s ease-in-out;
-        background-color: #fff;
-        opacity: 0;
-        visibility: hidden;
-        z-index: 9999;
-      }
-      .dark-mode .page-loading {
-        background-color: #0b0f19;
-      }
-      .page-loading.active {
-        opacity: 1;
-        visibility: visible;
-      }
-      .page-loading-inner {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        text-align: center;
-        -webkit-transform: translateY(-50%);
-        transform: translateY(-50%);
-        -webkit-transition: opacity .2s ease-in-out;
-        transition: opacity .2s ease-in-out;
-        opacity: 0;
-      }
-      .page-loading.active > .page-loading-inner {
-        opacity: 1;
-      }
-      .page-loading-inner > span {
-        display: block;
-        font-size: 1rem;
-        font-weight: normal;
-        color: #9397ad;
-      }
-      .dark-mode .page-loading-inner > span {
-        color: #fff;
-        opacity: .6;
-      }
-      .page-spinner {
-        display: inline-block;
-        width: 2.75rem;
-        height: 2.75rem;
-        margin-bottom: .75rem;
-        vertical-align: text-bottom;
-        border: .15em solid #b4b7c9;
-        border-right-color: transparent;
-        border-radius: 50%;
-        -webkit-animation: spinner .75s linear infinite;
-        animation: spinner .75s linear infinite;
-      }
-      .dark-mode .page-spinner {
-        border-color: rgba(255,255,255,.4);
-        border-right-color: transparent;
-      }
-      @-webkit-keyframes spinner {
-        100% {
-          -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-        }
-      }
-      @keyframes spinner {
-        100% {
-          -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-        }
-      }
-    </style>
+  <!-- Main Theme Styles + Bootstrap -->
+  <link rel="stylesheet" media="screen" href="/css/theme.min.css" />
 
-    <!-- Theme mode -->
-    <script>
-      let mode = window.localStorage.getItem('mode'),
-          root = document.getElementsByTagName('html')[0];
-      if (mode !== null && mode === 'dark') {
-        root.classList.add('dark-mode');
-      } else {
-        root.classList.remove('dark-mode');
-      }
-    </script>
+  <!-- Extra Styles -->
+  <link rel="stylesheet" media="screen" href="/custom-css/page-loader.css" />
+  <link rel="stylesheet" media="screen" href="/custom-css/typing-effect.css" />
 
-    <!-- Page loading scripts -->
-    <script>
-      (function () {
-        window.onload = function () {
-          const preloader = document.querySelector('.page-loading');
-          preloader.classList.remove('active');
-          setTimeout(function () {
-            preloader.remove();
-          }, 1000);
-        };
-      })();
-    </script>
-  </head>
+  <!-- Theme mode -->
+  <script>
+    let mode = window.localStorage.getItem("mode"),
+      root = document.getElementsByTagName("html")[0];
+    if (mode !== null && mode === "dark") {
+      root.classList.add("dark-mode");
+    } else {
+      root.classList.remove("dark-mode");
+    }
+  </script>
 
+  <!-- Page loading scripts -->
+  <script>
+    (function() {
+      window.onload = function() {
+        const preloader = document.querySelector(".page-loading");
+        preloader.classList.remove("active");
+        setTimeout(function() {
+          preloader.remove();
+        }, 1000);
+      };
+    })();
+  </script>
+</head>
 
-  <!-- Body -->
-  <body>
+<!-- Body -->
 
-    <!-- Page loading spinner -->
-    <div class="page-loading active">
-      <div class="page-loading-inner">
-        <div class="page-spinner"></div><span>Loading...</span>
-      </div>
+<body>
+  <!-- Page loading spinner -->
+  <div class="page-loading active">
+    <div class="page-loading-inner">
+      <div class="page-spinner"></div>
+      <span>Loading...</span>
     </div>
+  </div>
 
-
-    <!-- Page wrapper for sticky footer -->
-    <!-- Wraps everything except footer to push footer to the bottom of the page if there is little content -->
-    <main class="page-wrapper">
-
-
-      <!-- Navbar -->
-      <header class="header navbar navbar-expand-lg position-absolute navbar-sticky">
-        <div class="container px-3">
-          <a href="index.html" class="navbar-brand pe-3">
-            <img src="/img/logo.png" width="47" alt="Logo">
-            Nick Balabis | Web3 Developer
-          </a>
-          <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
-            <input type="checkbox" class="form-check-input" id="theme-mode">
-            <label class="form-check-label d-none d-sm-block" for="theme-mode">Light</label>
-            <label class="form-check-label d-none d-sm-block" for="theme-mode">Dark</label>
-          </div>
+  <!-- Page wrapper for sticky footer -->
+  <!-- Wraps everything except footer to push footer to the bottom of the page if there is little content -->
+  <main class="page-wrapper">
+    <!-- Navbar -->
+    <header class="header navbar navbar-expand-lg position-absolute navbar-sticky">
+      <div class="container px-3">
+        <a href="index.html" class="navbar-brand pe-3">
+          <img src="/img/logo.png" width="47" alt="Logo" />
+          Nick Balabis<span class="d-none d-md-inline"> | Web3 Developer</span>
+        </a>
+        <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
+          <input type="checkbox" class="form-check-input" id="theme-mode" />
+          <label class="form-check-label d-none d-sm-block" for="theme-mode">Light</label>
+          <label class="form-check-label d-none d-sm-block" for="theme-mode">Dark</label>
         </div>
-      </header>
+      </div>
+    </header>
 
+    <!-- Hero -->
+    <section class="jarallax position-relative d-flex align-items-center min-vh-100 bg-light mb-5 py-lg-5 pt-5">
+      <div class="container position-relative zindex-5 py-5">
 
-      <!-- Hero -->
+        <h1 class="text-center display-1">Hi, I'm Nick!</h1>
+        <h1 class="text-center display-1">I make <span class="typed-text text-gradient-primary"></span><span class="cursor">&nbsp;</span></h1>
 
-      <!-- About Me (Short) -->
+      </div>
+    </section>
 
-      <!-- Portfolio -->
+    <!-- About Me (Short) -->
 
-      <!-- Technologies -->
+    <!-- Portfolio -->
 
-      <!-- Contact CTA -->
+    <!-- Technologies -->
 
-    </main>
+    <!-- Contact CTA -->
+  </main>
 
+  <!-- Footer -->
+  <footer class="footer pt-5 pb-4 pb-lg-5 mt-2 mt-md-0"></footer>
 
-    <!-- Footer -->
-    <footer class="footer pt-5 pb-4 pb-lg-5 mt-2 mt-md-0">
-      
-    </footer>
+  <!-- Back to top button -->
+  <a href="#top" class="btn-scroll-top" data-scroll>
+    <span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span>
+    <i class="btn-scroll-top-icon bx bx-chevron-up"></i>
+  </a>
 
+  <!-- Vendor Scripts -->
+  <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+  <script src="/vendor/jarallax/dist/jarallax.min.js"></script>
+  <script src="/vendor/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
+  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/vendor/lightgallery/lightgallery.min.js"></script>
+  <script src="/vendor/lightgallery/plugins/video/lg-video.min.js"></script>
+  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/vendor/shufflejs/dist/shuffle.min.js"></script>
 
-    <!-- Back to top button -->
-    <a href="#top" class="btn-scroll-top" data-scroll>
-      <span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span>
-      <i class="btn-scroll-top-icon bx bx-chevron-up"></i>
-    </a>
+  <!-- Main Theme Script -->
+  <script src="/js/theme.min.js"></script>
 
+  <!-- Extra Scripts -->
+  <script src="/custom-js/typing-effect.js"></script>
+</body>
 
-    <!-- Vendor Scripts -->
-    <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <script src="/vendor/jarallax/dist/jarallax.min.js"></script>
-    <script src="/vendor/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
-    <script src="/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="/vendor/lightgallery/lightgallery.min.js"></script>
-    <script src="/vendor/lightgallery/plugins/video/lg-video.min.js"></script>
-    <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="/vendor/shufflejs/dist/shuffle.min.js"></script>
-
-    <!-- Main Theme Script -->
-    <script src="/js/theme.min.js"></script>
-  </body>
 </html>
