Outline Personal projects section

--- a/index.html
+++ b/index.html
@@ -97,16 +97,99 @@
         <h1 class="text-center display-1">Hi, I'm Nick!</h1>
         <h1 class="text-center display-1">I make <span class="typed-text text-gradient-primary"></span><span class="cursor">&nbsp;</span></h1>
 
+        <!-- Scroll down btn -->
+        <div class="text-center">
+          <a href="#about" data-scroll data-scroll-offset="100" class="btn btn-video btn-icon rounded-circle shadow-sm flex-shrink-0 stretched-link me-3">
+            <i class="bx bx-chevron-down"></i>
+          </a>
+          <span class="fs-sm d-none d-md-inline">Learn more</span>
+        </div>
+
       </div>
     </section>
 
-    <!-- About Me (Short) -->
+    <!-- About Me -->
+    <section id="about" class="container">
+      <h2 class="h1 mb-4 text-center">About Me</h2>
+      <div class="row justify-content-md-start justify-content-center">
+        <div class="col-md-6 col-sm-8 order-md-1 d-flex flex-column justify-content-between mt-4 pt-2 text-md-start text-center">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora recusandae rem cupiditate dicta, minima eveniet ducimus iusto asperiores voluptate placeat. Iusto nostrum maxime consectetur reiciendis aut obcaecati fuga voluptas unde.
+          Quis natus explicabo molestiae dicta, eum, sit consectetur, cum commodi iure exercitationem distinctio quisquam. Voluptatibus perferendis debitis earum ducimus adipisci nesciunt eligendi nobis exercitationem omnis excepturi ullam iste, eos placeat!</p>
+        </div>
 
-    <!-- Portfolio -->
+        <!-- Animated gfx -->
+        <div class="col-sm-6 col-sm-6 col-9 order-md-2 text-center">
+         *Technologies*
+        </div>
+      </div>
+    </section>
 
-    <!-- Technologies -->
+      <!-- Featured Projects -->
+      <section class="container mb-5 pt-lg-2 pt-xl-4 pb-2 pb-md-3 pb-lg-5">
+        <h2 class="h1 mb-4 text-center">Personal Projects</h2>
+        <p class="mb-4 mx-auto pb-3 fs-lg text-center" style="max-width: 636px;">We create websites and mobile apps, marketing materials, branding, web design, UX/UI design and illustrations.</p>
+
+        <!-- Portfolio grid -->
+        <div class="masonry-grid row g-md-4 g-3 mb-4">
+
+          <!-- Item -->
+          <div class="masonry-grid-item col-sm-4 col-12">
+            <a href="#" class="card card-portfolio card-hover bg-transparent border-0">
+              <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
+                <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-50 rounded-3"></span>
+                <div class="position-relative zindex-2">
+                  <h3 class="h5 text-light mb-2">Activiti</h3>
+                  <span class="fs-sm text-light opacity-70">Express / MongoDB / Bootstrap / HTML / CSS / JS</span>
+                </div>
+              </div>
+              <div class="card-img">
+                <img src="/img/project-covers/activiti.jpg" class="rounded-3" alt="Image">
+              </div>
+            </a>
+          </div>
+
+          <!-- Item -->
+          <div class="masonry-grid-item col-sm-4 col-12">
+            <a href="#" class="card card-portfolio card-hover bg-transparent border-0">
+              <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
+                <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-50 rounded-3"></span>
+                <div class="position-relative zindex-2">
+                  <h3 class="h5 text-light mb-2">Lost in SP4C3</h3>
+                  <span class="fs-sm text-light opacity-70">Solidity / React / HTML / CSS / JS</span>
+                </div>
+              </div>
+              <div class="card-img">
+                <img src="/img/project-covers/lostinsp4c3.jpg" class="rounded-3" alt="Image">
+              </div>
+            </a>
+          </div>
+
+          <!-- Item -->
+          <div class="masonry-grid-item col-sm-4 col-12">
+            <a href="#" class="card card-portfolio card-hover bg-transparent border-0">
+              <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
+                <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-50 rounded-3"></span>
+                <div class="position-relative zindex-2">
+                  <h3 class="h5 text-light mb-2">Big Blue Whale Shape</h3>
+                  <span class="fs-sm text-light opacity-70">3D Pollygonal Shape / Graphic Design / Art</span>
+                </div>
+              </div>
+              <div class="card-img">
+                <img src="/img/project-covers/comingsoon.jpg" class="rounded-3" alt="Image">
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="pt-md-3 pt-2 text-center">
+          <a href="portfolio-grid.html" class="btn btn-lg btn-primary w-sm-auto w-100">Explore all</a>
+        </div>
+      </section>
 
     <!-- Contact CTA -->
+    <section>
+      <h1 class="text-center display-2">Contact</h1>
+    </section>
   </main>
 
   <!-- Footer -->
